feat: 🎸 クライアント登録機能を追加
