# openapi/go/models/model_client_request.go
@@ -16,4 +16,10 @@ type ClientRequest struct {
 
 	// クライアントがサポートするスコープ - openid: OpenID Connectのスコープ - offline: リフレッシュトークンを取得するためのスコープ 
 	Scopes []string `json:"scopes"`
+
+	// オーディエンス 
+	Audience string `json:"audience,omitempty"`
+
+	// ClientSecretを安全に管理できるかどうか 
+	Public bool `json:"public,omitempty"`
 }
