# openapi/go/models/model_client_response.go
@@ -13,4 +13,10 @@ type ClientResponse struct {
 
 	// クライアントがサポートするスコープ - openid: OpenID Connectのスコープ - offline: リフレッシュトークンを取得するためのスコープ 
 	Scopes []string `json:"scopes"`
+
+	// オーディエンス 
+	Audience string `json:"audience,omitempty"`
+
+	// ClientSecretを安全に管理できるかどうか 
+	Public bool `json:"public,omitempty"`
 }
